added mcp with mq2 and 135

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,13 +7,20 @@
 		<h1>Actuators</h1>
 		<h2> Status </h2>
 		<h3> Fan Status ==>
-			{%if fan == 0: %}OFF{%endif%}{{a}}
-			{%if fan == 1: %}ON{%endif%}{{a}} </h3>
+			{%if fan == 0: %}OFF{%endif%}
+			{%if fan == 1: %}ON{%endif%}</h3>
 		<h3> Light Status ==> 
-			 {%if led == 0: %}OFF{%endif%}{{a}}
-			 {%if led == 1: %}ON{%endif%}{{a}}</h3>
+			 {%if led == 0: %}OFF{%endif%}
+			 {%if led == 1: %}ON{%endif%}</h3>
 		<h3> Temprature ==> {{temp}} C </h3>
 		<h3> Humidity ==> {{humi}} %</h3>
+		<h3> MQ 135 Smoke Level  ==> 
+			{%if mq135 >= 0.320: %}HIGH{%endif%}
+			{%if mq135 <= 0.319: %}LOW{%endif%}</h3>
+		<br>
+		<h3> MQ 2 Gas Level  ==> 
+			{%if mq2 >= 0.320: %}HIGH{%endif%}
+			{%if mq2 <= 0.319: %}LOW{%endif%}</h3>
 		<br>
 		<h2> Commands </h2>
 		<h3> Temprature and Humidity ==> 
